--- a/arch/arm64/configs/deen_defconfig
+++ b/arch/arm64/configs/deen_defconfig
@@ -1955,7 +1955,7 @@ CONFIG_TOUCHSCREEN_NT36xxx=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
-CONFIG_INPUT_HBTP_INPUT=y
+# CONFIG_INPUT_HBTP_INPUT is not set
 # CONFIG_HBTP_INPUT_SECURE_TOUCH is not set
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
